fixed styling overflow hidden by requiring it

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,4 +2,7 @@
     width: 100%;
     height: 70px;
     background-color: rgb(13, 11, 68);
+    position: fixed;
+    top: 0;
+    z-index: 2;
 }
